# Medusa

./: .gitignore  .medusa-ci-trigger  .medusa-runtime-refactor  .medusa-runtime-refactor-plan  .medusa-runtime-refactor-ready  .medusa-runtime-refactor-trigger  .modularization-app-export  CONTRIBUTING.md  Cargo.toml  FINAL.md  LICENSE  MEDUSA_SPEC.md  README.md  SECURITY.md  deny.toml
crates/medusa-agent/: Cargo.toml  build.rs
crates/medusa-agent/src/: approval.rs  coding_policy.rs  context_budget.rs  engine.rs  engine_base.rs  engine_support.rs  evidence.rs  goal.rs  identity_guard.rs  index_cache.rs  lib.rs  lib_with_index.rs  output_envelope.rs  policy.rs  repository_index.rs  session.rs  session_browser.rs  skill_handoff.rs  skill_injector.rs  skill_loader.rs  skill_matcher.rs  skill_retrieval.rs  transaction.rs  usage.rs  verification.rs  world_model_observation.rs  world_model_session.rs
crates/medusa-agent/src/session/: browser_assisted_escalation.rs  escalation_state.rs  lessons.rs  manual_escalation.rs  recall.rs  skill_drafts.rs  skill_outcomes.rs  skill_probation.rs
crates/medusa-agent/src/tools/: browser.rs  browser_dispatch.rs  filesystem.rs  git.rs  intelligence.rs  mod.rs  shell.rs  skills.rs  web.rs
crates/medusa-agent/tests/: approval_safety.rs  context_budget.rs  envelope_coverage.rs  identity_grounding.rs  identity_transaction_safety.rs  provider_execution_event.rs  skill_pipeline_coverage.rs  structured_compaction.rs  world_model_session.rs
crates/medusa-browser-client/: Cargo.toml
crates/medusa-browser-client/src/: lib.rs  protocol.rs  transport.rs
crates/medusa-browser-client/tests/: client_lifecycle_coverage.rs  protocol_contracts.rs  protocol_coverage.rs
crates/medusa-browserd/: Cargo.toml
crates/medusa-browserd/src/: main.rs  playwright.rs  server.rs  validation.rs
crates/medusa-browserd/tests/: playwright_bridge.rs
crates/medusa-capabilities/: Cargo.toml
crates/medusa-capabilities/src/: lib.rs
crates/medusa-cli/: Cargo.toml  build.rs
crates/medusa-cli/src/: config_command.rs  main.rs  skill_dependencies.rs  skill_graduation.rs  skill_lifecycle.rs  skill_probation.rs  skills.rs  wrapper.rs
crates/medusa-cli/tests/: cli_coverage.rs  config_command_coverage.rs
crates/medusa-config/: Cargo.toml
crates/medusa-config/src/: lib.rs
crates/medusa-config/tests/: config_struct.rs  knobs_coverage.rs  skill_config.rs
crates/medusa-context-retrieval/: Cargo.toml
crates/medusa-context-retrieval/src/: lib.rs
crates/medusa-continuation/: Cargo.toml
crates/medusa-continuation/src/: lib.rs
crates/medusa-core/: Cargo.toml
crates/medusa-core/src/: lib.rs
crates/medusa-daemon/: Cargo.toml  README.md
crates/medusa-daemon/src/: cancellation.rs  lib.rs  lifecycle.rs  paths.rs  process.rs  protocol.rs  scheduler.rs  server.rs  transport.rs
crates/medusa-daemon/src/server/: tests.rs
crates/medusa-daemon/tests/: concurrency_limits.rs  failure_recovery_coverage.rs  lifecycle_coverage.rs
crates/medusa-escalation/: Cargo.toml
crates/medusa-escalation/src/: lib.rs  lifecycle.rs  manual.rs
crates/medusa-execution-orchestrator/: Cargo.toml
crates/medusa-execution-orchestrator/src/: lib.rs
crates/medusa-extensions/: Cargo.toml
crates/medusa-extensions/src/: browser.rs  desktop_commander.rs  desktop_commander_tests.rs  hooks.rs  lib.rs  mcp.rs  redaction.rs  skills.rs  support.rs
crates/medusa-hardening/: Cargo.toml
crates/medusa-hardening/src/: archive.rs  chaos.rs  lib.rs  migrations.rs  observability.rs  release.rs  support.rs
crates/medusa-hardening/tests/: skill_observability.rs
crates/medusa-intelligence/: Cargo.toml
crates/medusa-intelligence/src/: discovery.rs  format.rs  impact.rs  index.rs  language.rs  lib.rs  patch.rs  retrieval.rs  snapshot.rs  support.rs
crates/medusa-intelligence/tests/: index_scale.rs
crates/medusa-memory/: Cargo.toml
crates/medusa-memory-consolidation/: Cargo.toml
crates/medusa-memory-consolidation/src/: lib.rs
crates/medusa-memory-writeback/: Cargo.toml
crates/medusa-memory-writeback/src/: lib.rs
crates/medusa-memory/src/: README.md  engine.rs  index.rs  lib.rs  lifecycle.rs  persistence.rs  proposal.rs  retrieval.rs  schema.rs  session_recall.rs  session_recall_inbox.rs  support.rs
crates/medusa-multi-agent-scheduler/: Cargo.toml
crates/medusa-multi-agent-scheduler/src/: lib.rs
crates/medusa-process-containment/: Cargo.toml
crates/medusa-process-containment/src/: lib.rs  windows.rs
crates/medusa-progress/: Cargo.toml
crates/medusa-progress/src/: lib.rs
crates/medusa-protocol/: Cargo.toml
crates/medusa-protocol/src/: lib.rs
crates/medusa-provider/: Cargo.toml
crates/medusa-provider/src/: lib.rs  manager.rs  resilience.rs
crates/medusa-provider/tests/: failover_lifecycle.rs  openai_provider.rs  provider_coverage.rs  provider_runtime_coverage.rs
crates/medusa-runtime/: Cargo.toml
crates/medusa-runtime/src/: commands.rs  error.rs  index_cache.rs  lib.rs  lib_with_index.rs  prompt.rs  skill_dependencies.rs  skill_dependency_locks.rs  support.rs  tests.rs
crates/medusa-runtime/tests/: controller_runtime_coverage.rs  skill_dependency_graph.rs  skill_dependency_locks_coverage.rs
crates/medusa-skills/: Cargo.toml  build.rs
crates/medusa-skills/src/: asset.rs  index.rs  lib.rs
crates/medusa-skills/tests/: manifest_coverage.rs
crates/medusa-testkit/: Cargo.toml
crates/medusa-testkit/src/: lib.rs
crates/medusa-time-travel/: Cargo.toml
crates/medusa-time-travel/src/: lib.rs
crates/medusa-tui/: Cargo.toml
crates/medusa-tui/src/: app.rs  clipboard.rs  commands.rs  daemon_status.rs  draft_store.rs  input.rs  lib.rs  main.rs  medusa_logo_ascii.txt  native_clipboard.rs  render.rs  runtime.rs  session.rs
crates/medusa-tui/src/app/: modal_events.rs  models.rs  tests.rs
crates/medusa-tui/src/render/: markdown.rs  (+2 more)
crates/medusa-tui/tests/: app_modal_coverage.rs  clipboard_coverage.rs  github_parity.rs  runtime_effort_coverage.rs  scrollback_coverage.rs
crates/medusa-turn-assembly/: Cargo.toml
crates/medusa-turn-assembly/src/: lib.rs
(+436 files in other folders)
