[workspace]
resolver = "2"
members = [
  "crates/medusa-core",
  "crates/medusa-config",
  "crates/medusa-protocol",
  "crates/medusa-testkit",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/benclawbot/Medusa"

[workspace.dependencies]
medusa-core = { path = "crates/medusa-core" }
medusa-protocol = { path = "crates/medusa-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
time = { version = "=0.3.47", features = ["serde", "formatting", "parsing", "macros"] }
ulid = { version = "1.1", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
proptest = "1.6"
tempfile = "3.16"

[workspace.lints.rust]
unsafe_code = "forbid"
