[workspace]
resolver = "2"
members = [
  "crates/medusa-core",
  "crates/medusa-config",
  "crates/medusa-protocol",
  "crates/medusa-testkit",
  "crates/medusa-provider",
  "crates/medusa-intelligence",
  "crates/medusa-agent",
  "crates/medusa-browser-client",
  "crates/medusa-browserd",
  "crates/medusa-daemon",
  "crates/medusa-runtime",
  "crates/medusa-tui",
  "crates/medusa-workers",
  "crates/medusa-memory",
  "crates/medusa-extensions",
  "crates/medusa-improvement",
  "crates/medusa-hardening",
  "crates/medusa-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/benclawbot/Medusa"

[workspace.dependencies]
medusa-core = { path = "crates/medusa-core" }
medusa-protocol = { path = "crates/medusa-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
time = { version = "=0.3.47", features = ["serde", "formatting", "parsing", "macros"] }
ulid = { version = "1.1", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
proptest = "1.6"
tempfile = "3.16"
serial_test = "3.0"

[workspace.lints.rust]
unsafe_code = "forbid"
