[workspace]
resolver = "2"
members = [
  "crates/medusa-core",
  "crates/medusa-config",
  "crates/medusa-protocol",
  "crates/medusa-testkit",
  "crates/medusa-provider",
  "crates/medusa-intelligence",
  "crates/medusa-world-model",
  "crates/medusa-goal",
  "crates/medusa-progress",
  "crates/medusa-confidence",
  "crates/medusa-failure",
  "crates/medusa-continuation",
  "crates/medusa-process-registry",
  "crates/medusa-wakeup",
  "crates/medusa-prompt-cache",
  "crates/medusa-context",
  "crates/medusa-context-retrieval",
  "crates/medusa-turn-assembly",
  "crates/medusa-mcp-cache",
  "crates/medusa-markdown-memory",
  "crates/medusa-memory-consolidation",
  "crates/medusa-memory-writeback",
  "crates/medusa-agent",
  "crates/medusa-browser-client",
  "crates/medusa-browserd",
  "crates/medusa-process-containment",
  "crates/medusa-daemon",
  "crates/medusa-runtime",
  "crates/medusa-tui",
  "crates/medusa-workers",
  "crates/medusa-memory",
  "crates/medusa-extensions",
  "crates/medusa-improvement",
  "crates/medusa-hardening",
  "crates/medusa-update",
  "crates/medusa-github",
  "crates/medusa-capabilities",
  "crates/medusa-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/benclawbot/Medusa"

[workspace.dependencies]
medusa-core = { path = "crates/medusa-core" }
medusa-protocol = { path = "crates/medusa-protocol" }
medusa-process-containment = { path = "crates/medusa-process-containment" }
medusa-world-model = { path = "crates/medusa-world-model" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
time = { version = "=0.3.47", features = ["serde", "formatting", "parsing", "macros"] }
ulid = { version = "1.1", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
getrandom = "0.4"
proptest = "1.6"
tempfile = "3.16"
serial_test = "3.0"
semver = { version = "1.0", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[workspace.lints.rust]
unsafe_code = "forbid"
