[package]
name = "medusa-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
medusa-config = { path = "../medusa-config" }
medusa-core.workspace = true
medusa-extensions = { path = "../medusa-extensions" }
medusa-hardening = { path = "../medusa-hardening" }
medusa-intelligence = { path = "../medusa-intelligence" }
medusa-protocol.workspace = true
medusa-provider = { path = "../medusa-provider" }
medusa-skills = { path = "../medusa-skills" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
walkdir = "2.5"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
