[package]
name = "medusa-capabilities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
medusa-config = { path = "../medusa-config" }
medusa-core.workspace = true
medusa-extensions = { path = "../medusa-extensions" }
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
