[package]
name = "medusa-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "medusa"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
medusa-agent = { path = "../medusa-agent" }
medusa-config = { path = "../medusa-config" }
medusa-core.workspace = true
medusa-daemon = { path = "../medusa-daemon" }
medusa-extensions = { path = "../medusa-extensions" }
medusa-hardening = { path = "../medusa-hardening" }
medusa-provider = { path = "../medusa-provider" }
medusa-tui = { path = "../medusa-tui" }
serde.workspace = true
serde_json.workspace = true
walkdir = "2.5"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
