[package]
name = "medusa-config"
description = "Typed layered configuration for Medusa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
# Tests need `unsafe` to mutate process environment (unsafe since Rust 1.86).
unsafe_code = "deny"

[dependencies]
medusa-core.workspace = true
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
serial_test.workspace = true
