[package]
name = "medusa-continuation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
medusa-confidence = { path = "../medusa-confidence" }
medusa-failure = { path = "../medusa-failure" }
serde.workspace = true
time.workspace = true

[lints]
workspace = true
