[package]
name = "medusa-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
medusa-core.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
ulid.workspace = true

[target.'cfg(windows)'.dependencies]
getrandom.workspace = true
hex.workspace = true
medusa-process-containment.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
