[package]
name = "medusa-execution-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
medusa-repository-snapshot = { path = "../medusa-repository-snapshot" }
medusa-worker-read-set = { path = "../medusa-worker-read-set" }
medusa-worker-transaction = { path = "../medusa-worker-transaction" }

[lints]
workspace = true
