[package]
name = "medusa-memory-consolidation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
sha2.workspace = true
hex.workspace = true
time.workspace = true

[lints]
workspace = true
