[package]
name = "medusa-memory-writeback"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
medusa-memory-consolidation = { path = "../medusa-memory-consolidation" }

[lints]
workspace = true
