[package]
name = "medusa-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
medusa-core.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
ulid.workspace = true
walkdir = "2.5"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
