[package]
name = "medusa-progress"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
medusa-core.workspace = true
medusa-goal = { path = "../medusa-goal" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
