[package]
name = "medusa-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "medusa-tui"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
medusa-daemon = { path = "../medusa-daemon" }

[lints]
workspace = true
