[package]
name = "medusa-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "medusa-tui"
path = "src/main.rs"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
hex.workspace = true
medusa-daemon = { path = "../medusa-daemon" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
